feat: Implement persona-driven chat functionality with a new dashboard UI and backend services.